--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -5,13 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro Site</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <h1> Olá Mundo </h1>
+<header>
+    <h1>Meu Site</h1>
+    <nav> link link link.... </nav>
+</header>
 
-    <p> Este foi o peimeiro site que eu criei, com um título, uma linha e um páragrafo.</p>
+<main>
+    <section>
+        <article id="caixa">
+            <h2>Titulo</h2>
+            <p>Texto do Artigo</p>
+        </article>
+        <article>
+            <h2>Titulo</h2>
+            <p>Texto do artigo</p>
+            <aside>
+                conteudo perifico do artigo
+            </aside>
+        </article>
+
+    </section>
+    <aside>
+        Conteudo perifico do site
+    </aside>
+</main>
+
+<footer>
+    Conteúdo do rodape
+</footer>
+
+<!-- <body>
+    <h1 id="titulo-principal">Capítulo 1</h1>
+    <h2 class="topico">Capítulo 1.1</h2>
+    <p class="texto">Lorem, ipsum sit amem Lorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum
+        sit amemLorem,
+        ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum
+        sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit
+        amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit
+        amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit
+    </p>
+
+    <h2 class="topico">Capítulo 1.2</h2>
+    <p> Lorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem,
+        ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum
+        sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit
+        amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit
+        amemLorem, ipsum sit amem</p>
+
+    <h1 class="topico">Capítulo 2</h1>
+    <h2>Capítulo 2.1</h2>
+    <p>Lorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem,
+        ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum
+        sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit
+        amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit
+        amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amemLorem, ipsum sit amem</p>
+
+    <h3>Exemplo de caixa Exemplo de caixa Exemplo de caixa Exemplo de caixaExemplo de caixaExemplo de caixaExemplo de
+        caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de
+        caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de
+        caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de
+        caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de
+        caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de
+        caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de caixaExemplo de
+        caixa</h3>
 </body>
 
-</html>
+</html> -->
